# toas

./: .coverage  .coverage 2  .coverage.darkengram.pid42147.XHqLJJnx.HsE8HKbpUIlh  .coverage.darkengram.pid42148.X6OQ5Anx.HVWjzl8wYfxh  .coverage.darkengram.pid42149.XX7XpyHx.HzFJqTFKrK0h  .coverage.darkengram.pid42150.Xyo2auRx.HN3Gig6nEBph  .coverage.darkengram.pid42151.XGvS4Xdx.HiIlPiJnqJSh  .coverage.darkengram.pid42152.XSvxsvOx.H10XZ9wSPeWh  .coverage.darkengram.pid42153.XTyzVfnx.HJSLLVXWXUWh  .coverage.darkengram.pid42154.XPApv15x.HthpAQuvqPJh  .coverage.darkengram.pid42155.Xc2tVSHx.HYbm3tLH8H9h  .coverage.darkengram.pid42158.Xhsca2nx.Hy9bAbU9Dheh  .coverage.darkengram.pid42161.XmJmfuax.HcX6ErZFkSIh  .coverage.darkengram.pid42163.XUkdbIrx.HMPKY6R4xGTh  .coverage.darkengram.pid42165.XBhSNtCx.HwjHIRllg7Rh  .coverage.darkengram.pid42168.XEWOcS4x.H9rsyiwVVwuh  .gitignore  AGENTS.md  README.md  pyproject.toml  session-dogfood.md  session.md~  session.mq~  session.mt~  session.mu~  session.mv~  session.mw~  session.mx~  session.my~  session.mz~
docs/: architecture-masterplan.md  capabilities.md  checks.md  execution-model.md  llm-notes.md  prompt-probing-taxonomy.md  protocol-notes.md  release-process.md  roadmap.md  runtime-direction.md  runtime-ownership.md  storage-notes.md  terminology.md  vision.md
docs/acceptance/: README.md  complete-change-request.md  operator-starter-triad.md  pytest-options.md
docs/notes/: 2026-04-08-context-without-prefix-caching.md  2026-04-08-streaming-cancel-and-projection-surfaces.md  2026-04-11-gentle-complexity-pressure-for-maintainability.md  2026-04-11-hierarchical-context-lifecycle-and-lensing.md  2026-04-11-prompt-quality-feedback-loop-idea.md  2026-05-09-config-precedence-principles.md  2026-05-10-function-intent-test-audit-pass1.md  2026-05-15-operational-state-vs-conversational-projection.md  2026-05-16-doc-truth-model.md  2026-05-17-append-time-parent-selection-invariant.md  2026-05-17-llama-cpp-server-template-synopsis.md  2026-05-23-transcript-first-graph-rewrite-laws.md  2026-05-24-cross-surface-regression-matrix-and-provenance-audit.md  2026-05-24-multi-active-transcript-surfaces-design.md  2026-05-24-soft-failure-warning-channel-planning-sketch.md  2026-05-25-frontier-middle-seam-state-space.md  2026-05-25-frontier-path-proof-n2-vs-n1.md  2026-05-31-phase-b-runtime-ownership-migration-notes.md  2026-06-19-surface-binding-retirement-and-replacement-shape.md  2026-06-26-events-jsonl-multiplicity-lcp-primacy-and-merge-provenance.md  2026-06-26-transcript-parallelism-and-queue-shaped-projections.md  2026-06-27-history-affordances-and-semantic-restaging.md  2026-06-27-segmented-event-journal-storage-contract.md  2026-06-28-llm-backend-generalization-and-gemini-discovery.md  2026-06-28-surface-family-and-design-parent-discipline.md  2026-06-29-history-retention-and-lifecycle.md  2026-06-29-history-storage-alternatives.md  2026-06-29-history-use-pressure-contract.md  2026-06-29-operator-history-use-cases.md  2026-06-29-runtime-history-use-cases.md  2026-06-29-scale-model-history-scenarios.md  2026-06-29-segmented-storage-contradiction-inventory.md  2026-06-29-storage-scale-model-proof-contract.md  2026-06-30-history-contract-mismatch-matrix.md  2026-07-04-history-recovery-specimen-catalog.md  2026-07-05-retention-limited-history-absence-contract.md  2026-07-05-transcript-llm-input-surface-contract.md  2026-07-05-transcript-parallel-capability-seams.md  2026-07-16-artifact-continuations-and-polyglot-runtime-state.md  2026-07-16-durable-history-preview-contract.md  (+2 more)
docs/protocols/: vim-host-stdio.md
docs/releases/: 0.0.0.0.md  0.0.1.0.md  README.md
scripts/: cancel_race_sweep.py  canonical_prefix_collapse.py  check.sh  fetch_vader.sh  salvage_root_divergence.py  targeted_coverage.py  vim_cancel_stall_sweep.py
spikes/shell_host_stdio/: README.md  fd-client.py  shell-init.zsh
src/toas/: acceptance_harness.py  backend_policy.py  bench.py  capability_prompts.py  cli.py  cli_analysis_commands.py  cli_async_commands.py  cli_commands.py  cli_demo_async_client.py  cli_dispatch.py  cli_dispatch_ops.py  cli_host_commands.py  cli_local_commands.py  cli_local_surface_commands.py  cli_replay_script.py  cli_runtime_commands.py  cli_session_commands.py  cli_session_views.py  cli_streaming.py  cli_surface_commands.py  cli_usage.py  config.py  config_overrides.py  config_parsing.py  coverage_gate.py  daemon.py  daemon_async_runner.py  daemon_handlers.py  (+42 more)
tasks/: README.md  WORKBOARD.md  task-template.md
tests/: conftest.py  test_acceptance_harness.py  test_async_stdio_todo_ipc_experiment.py  test_backend_policy.py  test_cancel_race_sweep.py  test_cli.py  test_cli_analysis_commands.py  test_cli_async_commands.py  test_cli_commands.py  test_cli_demo_async_client.py  test_cli_dispatch.py  test_cli_dispatch_ops.py  test_cli_host_commands.py  test_cli_local_commands.py  test_cli_local_surface_commands.py  test_cli_replay_script.py  test_cli_runtime_commands.py  test_cli_session_commands.py  test_cli_session_views.py  test_cli_smoke.py  test_cli_surface_commands.py  test_config.py  test_conftest_guards.py  test_cost_profile.md  test_coverage_gate.py  test_daemon.py  test_daemon_async_runner.py  test_daemon_async_runner_warm.py  test_daemon_backend_lifecycle.py  test_daemon_facade_async_ops.py  test_daemon_facade_backend_state_ops.py  test_daemon_facade_helpers.py  test_daemon_facade_process.py  test_daemon_handlers.py  test_daemon_local_ops.py  test_daemon_op_dispatch.py  test_daemon_ops.py  test_daemon_package_coverage.py  test_daemon_process_control.py  test_daemon_request_contract.py  (+103 more)
tools/: toas_spike_loop.sh
(+1073 files in other folders)
