[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "toas"
version = "0.1.0"
description = "Transcript-Oriented Agent System"
requires-python = ">=3.10"

dependencies = [
    "openai>=2.30.0",
    "PyYAML>=6.0",
]

[project.scripts]
toas = "toas.cli:main"
toasd = "toas.daemon:main"
toas-llm-harness = "toas.llm_harness:main"
toas-bench = "toas.bench:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toas = ["py.typed", "prompts/**/*.txt"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.15.10",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["toas"]

[tool.mypy]
python_version = "3.12"
files = [
    "src/toas/capability_prompts.py",
    "src/toas/config.py",
    "src/toas/prompts.py",
    "src/toas/tools.py",
]
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true
