[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "toas"
version = "0.1.0"
description = "Transcript-Oriented Agent System"
requires-python = ">=3.10"

dependencies = [
    "openai>=2.30.0",
    "pytest-xdist>=3.8.0",
    "PyYAML>=6.0",
]

[project.scripts]
toas = "toas.cli:main"
toasd = "toas.daemon:main"
toas-llm-harness = "toas.llm_harness:main"
toas-bench = "toas.bench:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
toas = ["py.typed", "prompts/**/*.txt", "procedures/**/*.yaml"]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pytest-bdd>=8.1.0",
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.12",
    "pytest-timeout>=2.3.1",
    "ruff>=0.15.10",
    "types-pyyaml>=6.0.12.20260408",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "acceptance: long-horizon acceptance scenarios",
    "S1: acceptance scenario id S1",
    "S2: acceptance scenario id S2",
    "S3: acceptance scenario id S3",
    "intake_to_staged_frontier: acceptance scenario slug",
    "staged_frontier_to_first_implementation: acceptance scenario slug",
    "interruption_to_recovered_frontier: acceptance scenario slug",
]
addopts = [
    "--cov=toas",
    "--cov-report=term-missing",
    "--cov-fail-under=92",
    "--cov-max-missing-files=18",
]
timeout = 20

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["F", "I", "UP", "B", "C4", "C90", "PLR0912", "PLR0913", "PLR0915"]

[tool.ruff.lint.isort]
known-first-party = ["toas"]

[tool.ruff.lint.mccabe]
max-complexity = 80

[tool.ruff.lint.pylint]
max-args = 12
max-branches = 120
max-returns = 10
max-statements = 300

[tool.ruff.lint.per-file-ignores]
"src/toas/step.py" = ["C901", "PLR0912", "PLR0913", "PLR0915"]
"src/toas/graph.py" = ["PLR0913"]
"src/toas/llm_harness.py" = ["PLR0913"]

[tool.mypy]
python_version = "3.12"
files = [
    "src/toas/bench.py",
    "src/toas/capability_prompts.py",
    "src/toas/config.py",
    "src/toas/graph.py",
    "src/toas/llm.py",
    "src/toas/prompts.py",
    "src/toas/rpc_protocol.py",
    "src/toas/rpc_client.py",
    "src/toas/rpc_tcp.py",
    "src/toas/rpc_transport.py",
    "src/toas/rpc_unix.py",
    "src/toas/rpc_windows.py",
    "src/toas/secrets.py",
    "src/toas/llm_harness.py",
    "src/toas/step.py",
    "src/toas/transcript.py",
    "src/toas/tools.py",
]
mypy_path = "src"
explicit_package_bases = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
pretty = true

[tool.coverage.report]
skip_covered = true
show_missing = true
